@@ -1,5 +1,7 @@
 BEGIN { $| = 1; print "1..5\n"; }
+
 END {print "not ok 1\n" unless $loaded;}
+
 use Coro;
 use Coro::Event;
 $loaded = 1;
@@ -14,7 +16,7 @@ async {
 
 print "ok 2\n";
 
-do_var(var => \$var, poll => 'w');
+do_var (var => \$var, poll => 'w');
 
 print $var == 7 ? "ok 5\n" : "not ok 5\n";
 
